CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SharedPtr)
SET(PROJECT_OUTNAME SharedPtr)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

#-- 设置库目录
link_directories(
    ${PROJECT_SOURCE_DIR}/../lib
    ${PROJECT_SOURCE_DIR}/lib
)

#-- 设置头文件目录
include_directories(${PROJECT_SOURCE_DIR}/inc)

#-- 设置依赖库
SET(PROJECT_LIBS_PLATFORM_DEBUG
        ws2_32.lib
)
SET(PROJECT_LIBS_PLATFORM_RELEASE
        ws2_32.lib
)

file(GLOB_RECURSE SRC_FILES src/*.cpp)
file(GLOB_RECURSE INC_FILES inc/*.hpp)

ADD_EXECUTABLE(${PROJECT_OUTNAME} ${SRC_FILES} ${HEAD_FILES})
target_link_libraries(${PROJECT_OUTNAME} ${PROJECT_LIBS_PLATFORM_DEBUG} ${PROJECT_LIBS_PLATFORM_RELEASE})


MESSAGE(STATUS "${PROJECT_OUTNAME} is BINARY dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "${PROJECT_OUTNAME} is SOURCE dir:" ${PROJECT_SOURCE_DIR})

